--- a/Frontiers Update/mod.ini
+++ b/Frontiers Update/mod.ini
@@ -1,13 +1,13 @@
 [Desc]
 Author="ROB & Nur"
 Title="Frontiers Sonic"
-Version=2.0
+Version=1.0
 Description="A recreation of Frontiers Sonic in Generations"
 Date="year-month-day"
 AuthorURL=""
 
 [Main]
-UpdateServer=""
+UpdateServer="https://raw.githubusercontent.com/TheOnlyR0B/ROBUpdateServer/main/Frontiers%20Update"
 SaveFile=""
 ID="77A93352"
 IncludeDir0="."
