--- a/Frontiers Update/mod.ini
+++ b/Frontiers Update/mod.ini
@@ -1,7 +1,7 @@
 [Desc]
 Author="ROB & Nur"
 Title="Frontiers Sonic"
-Version=3.3.1
+Version=3.4
 Description="A recreation of Frontiers Sonic in Generations"
 Date="year-month-day"
 AuthorURL=""
@@ -10,9 +10,10 @@ AuthorURL=""
 UpdateServer="https://raw.githubusercontent.com/TheOnlyR0B/ROBUpdateServer/main/Frontiers%20Update"
 SaveFile=""
 ID="77A93352"
-IncludeDir0="."
-IncludeDirCount=1
+IncludeDir0="disk"
+IncludeDir1="disk"
+IncludeDirCount=2
 DependsCount=0
-DLLFile="SonicMouth.dll"
+DLLFile="Sonic.dll"
 CodeFile=""
-ConfigSchemaFile=""
+ConfigSchemaFile="config.json"
