--- a/Frontiers Update/mod_version.ini
+++ b/Frontiers Update/mod_version.ini
@@ -1,6 +1,6 @@
 [Main]
-VersionString="3.3.1
-DownloadSizeString="73 MB"
+VersionString="3.4"
+DownloadSizeString="68 MB"
 Markdown="changelog.md"
 [Changelog]
 StringCount=0
